--- a/src/assets/styles/sass/app.scss
+++ b/src/assets/styles/sass/app.scss
@@ -3,3 +3,30 @@ body {
   margin: 0;
   height: 100%;
 }
+
+@keyframes yellow_to_orange {
+  20% {
+    fill: yellow;
+  }
+  80% {
+    fill: orange;
+  }
+}
+
+.wrap {
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+
+  &-sun {
+    width: 40%;
+    max-width: 400px;
+
+    &-circuit {
+      fill: yellow;
+      animation: yellow_to_orange 5s ease infinite;
+    }
+  }
+}
