Atualizado animação do circuito do ship

--- a/src/assets/styles/sass/app.scss
+++ b/src/assets/styles/sass/app.scss
@@ -4,12 +4,13 @@ body {
   height: 100%;
 }
 
+body {
+  background: white;
+}
+
 @keyframes yellow_to_orange {
-  20% {
-    fill: yellow;
-  }
-  80% {
-    fill: orange;
+  50% {
+    stroke-dasharray: 1000;
   }
 }
 
@@ -22,11 +23,79 @@ body {
 
   &-sun {
     width: 40%;
-    max-width: 400px;
+    //max-width: 700px;
 
     &-circuit {
-      fill: yellow;
       animation: yellow_to_orange 5s ease infinite;
     }
   }
+}
+
+
+@keyframes circuit_animated_1 {
+  0% {
+    stop-color: yellow;
+  }
+}
+
+@keyframes circuit_animated_2 {
+  20% {
+    stop-color: yellow;
+  }
+}
+
+@keyframes circuit_animated_3 {
+  40% {
+    stop-color: yellow;
+  }
+}
+
+@keyframes circuit_animated_4 {
+  60% {
+    stop-color: yellow;
+  }
+}
+
+@keyframes circuit_animated_5 {
+  80% {
+    stop-color: yellow;
+  }
+}
+
+#circuit_animated stop:nth-child(1),
+#circuit_animated stop:nth-child(2),
+#circuit_animated stop:nth-child(3),
+#circuit_animated stop:nth-child(4),
+#circuit_animated stop:nth-child(5) {
+  animation-duration: 4s;
+  animation-delay: 0s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-direction: reverse;
+}
+
+#circuit_animated stop:nth-child(1) {
+  stop-color: #FC762B;
+  animation-name: circuit_animated_1;
+}
+
+#circuit_animated stop:nth-child(2) {
+  stop-color: #FC762B;
+  animation-name: circuit_animated_2;
+}
+
+#circuit_animated stop:nth-child(3) {
+  stop-color: #FC762B;
+  animation-name: circuit_animated_3;
+}
+
+#circuit_animated stop:nth-child(4) {
+  stop-color: #FB8217;
+  animation-name: circuit_animated_4;
+}
+
+#circuit_animated stop:nth-child(5) {
+  stop-color: #FBAE17;
+  animation-name: circuit_animated_5;
 }
