--- a/src/assets/styles/sass/app.scss
+++ b/src/assets/styles/sass/app.scss
@@ -8,9 +8,9 @@ body {
   background: white;
 }
 
-@keyframes yellow_to_orange {
+@keyframes shake {
   50% {
-    stroke-dasharray: 1000;
+    transform: rotate(1.2deg);
   }
 }
 
@@ -23,10 +23,20 @@ body {
 
   &-sun {
     width: 40%;
-    //max-width: 700px;
+    max-width: 700px;
+
+    &-sunbeams {
+      // transform-origin: center;
+      animation-duration: 3s;
+      animation-delay: 0s;
+      animation-fill-mode: forwards;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out;
+      animation-direction: reverse;
+      animation-name: shake;
+    }
 
     &-circuit {
-      animation: yellow_to_orange 5s ease infinite;
     }
   }
 }
